# langrag

./: .flake8  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/rag_chat_app/: config.py  enums.py  main.py  run_ingestion.py
src/rag_chat_app/chat/: __init__.py  chat_service.py
src/rag_chat_app/document_sources/: __init__.py  base.py  localfile_source.py  metadata.py  source_factory.py
src/rag_chat_app/ingestion/: __init__.py  ingestion_service.py
src/rag_chat_app/intent/: __init__.py  enums.py  intent_manager.py
src/rag_chat_app/llm/: enums.py  llm_config.py  llm_registry.py  llm_service.py
src/rag_chat_app/parsers/: __init__.py  base.py  docx_parser.py  markdown_parser.py  parser_factory.py  pdf_parser.py  rtf_parser.py  txt_parser.py  xlsx_parser.py
src/rag_chat_app/prompts/: __init__.py  base.py  intention_prompt.py  prompt_builders.py  prompt_factory.py
src/rag_chat_app/retrieval/: retrieval_manager.py  retrievers.py
src/rag_chat_app/retrivers/: retrivers.py
src/rag_chat_app/storage/: __init__.py  json_store.py  metadata_store.py  run_migrations.py  sqlite_store.py  store_factory.py
src/rag_chat_app/storage/migrations/: __init__.py
src/rag_chat_app/utils/: __init__.py  file_utils.py  files_clasificator.py  files_classifier.py  utils.py
src/rag_chat_app/vector/: __init__.py  chunker.py  embedding_factory.py  vector_store_factory.py
src/rag_chat_app/vector/stores/: base.py  chroma_store.py
