[project]
name = "rag-chat-app"
version = "0.1.0"
description = "A local, modular Retrieval-Augmented Generation (RAG) chat application with document upload, vector search, and LLM integration."
authors = [
    {name = "Aliaksandr Aliakseyeu",email = "aliaksandr.aliakseyeu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "pypdfium2 (>=4.30.1,<5.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "unstructured (>=0.18.14,<0.19.0)",
    "pypandoc (>=1.15,<2.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "msoffcrypto-tool (>=5.4.2,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag-chat-app = "rag_chat_app.main:main"